scrollbars fixed

--- a/src/app/contacts/contact-card/contact-card.scss
+++ b/src/app/contacts/contact-card/contact-card.scss
@@ -8,7 +8,7 @@
   padding: 0px;
   gap: 21px;
   position: absolute;
-  height: calc(1024px - 96px);
+  height: calc(100vh - 320px);
   left: 750px;
   top: 311px;
   font-family: 'Inter', sans-serif;
